[package]
name = "vecnod-genesis-generator"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
vecno-hashes = { version = "0.0.1", path = "../crypto/hashes" }
vecno-consensus-core = { version = "0.0.1", path = "../consensus/core" }
vecno-consensus-client = { version = "0.0.1", path = "../consensus/client" }
vecno-muhash = { version = "0.0.1", path = "../crypto/muhash" }
vecno-pow = { version = "0.0.1", path = "../consensus/pow" }
vecno-mining = { version = "0.0.1", path = "../mining" }
wasm-bindgen = { version = "0.2.93" }
serde = { version = "1.0.109", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5.1" }
sha2 = "0.10.8"
blake3 = "1.5.1"
thiserror = "1.0"
js-sys = "0.3.70"
smallvec.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
itertools.workspace = true
vecno-database.workspace = true

[dev-dependencies]
vecno-math = { version = "0.0.1", path = "../math" }